@@ -15,6 +15,9 @@
 	* src/ejabberd_config.erl (normalize_hosts/2): Replace jlib:nodeprep/1
 	by exmpp_stringprep:nodeprep/1 and change the error handling.
 
+	*  src/ejabberd_c2s.erl (handle_sync_event/4): Remove a remaining
+	jlib:jid_remove_resource/1 call.
+
 2008-10-09  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	* src/ejabberd_c2s.erl: Fix handling of unauthenticated stanzas which
